[🔨] Fix mark going out of bounds of map

--- a/Frontend/music_app/src/assets/css/custom.css
+++ b/Frontend/music_app/src/assets/css/custom.css
@@ -14,11 +14,6 @@
     width: 100%;
 }
 
-.mapboxgl-canvas {
-    width:auto;
-    height:100%!important;
-}
-
 select {
     color:black;
 }
@@ -29,4 +24,8 @@ textarea {
 
 #list-forum-posts {
     height:100%!important
+}
+
+#add-event-map {
+    width:100%!important;
 }
